@@ -1,4 +1,9 @@
 2014-05-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gputils/testsuite/gpdasm.project/op12e.asm,
+    gputils/testsuite/test:
+    Added the enhanced 12 bit core test.
+
+2014-05-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gputils/testsuite/gpdasm.project/op14e.asm,
     gputils/testsuite/test:
     Added the enhanced 14 bit core test.
